--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,4 @@
-﻿altair==4.2.0
-asttokens==2.4.1
-attrs @ file:///C:/b/abs_89hmquz5ga/croot/attrs_1734533130810/work
-blinker @ file:///C:/b/abs_b1i87khtob/croot/blinker_1737448732095/work
-Bottleneck @ file:///C:/b/abs_816hr2khp1/croot/bottleneck_1731058648110/work
-Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
-cachetools @ file:///C:/b/abs_fcvwpc5vh9/croot/cachetools_1738224687938/work
-certifi @ file:///C:/b/abs_8a944p1_gn/croot/certifi_1738623753421/work/certifi
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/click_1699473800648/work
-colorama==0.4.6
-comm==0.2.1
-contourpy @ file:///C:/b/abs_f2u2o_8s9g/croot/contourpy_1732540071787/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy==1.8.1
-decorator==5.1.1
-executing==2.0.1
-fonttools @ file:///C:/b/abs_4crkswws2h/croot/fonttools_1737040078745/work
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///C:/b/abs_2bkslnqz4i/croot/gitpython_1720455044865/work
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
-ipykernel==6.29.2
-ipython==8.21.0
-jedi==0.19.1
-Jinja2 @ file:///C:/b/abs_10zs3i4lof/croot/jinja2_1737760123028/work
-joblib==1.4.2
-jsonschema @ file:///C:/b/abs_394_t6__xq/croot/jsonschema_1728486718320/work
-jsonschema-specifications @ file:///C:/Users/dev-admin/py312/jsonschema-specifications_1706803038066/work
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-kiwisolver @ file:///C:/b/abs_faf90xet7a/croot/kiwisolver_1737040915779/work
-markdown-it-py @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/markdown-it-py_1699473886965/work
-MarkupSafe @ file:///C:/b/abs_a0ma7ge0jc/croot/markupsafe_1738584052792/work
-matplotlib==3.10.0
-matplotlib-inline==0.1.6
-mdurl @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/mdurl_1699473506455/work
-mkl-service==2.4.0
-mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
-mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
-nest-asyncio==1.6.0
-numexpr @ file:///C:/b/abs_05o8p7bfml/croot/numexpr_1730215959182/work
-numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp312-cp312-win_amd64.whl#sha256=becc06674317799ad0165a939a7613809d0bee9bd328a1e4308c57c39cacf08c
-packaging==23.2
-pandas @ file:///C:/b/abs_e18w9ay4we/croot/pandas_1732735115740/work/dist/pandas-2.2.3-cp312-cp312-win_amd64.whl#sha256=2c8058e41dda2e7ecfff0740ad1d98f17d528c740f71b038c523a9d24d2321b0
-parso==0.8.3
-pillow @ file:///C:/b/abs_b50vowcrzo/croot/pillow_1738010273782/work
-platformdirs==4.2.0
-ply @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/ply_1699473999871/work
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow @ file:///C:/b/abs_0aneze9pgl/croot/pyarrow_1738229440651/work/python
-pydeck @ file:///C:/b/abs_47xw5z_59x/croot/pydeck_1738340983078/work
-Pygments==2.17.2
-pyparsing @ file:///C:/b/abs_40z8gyj9wi/croot/pyparsing_1731445739241/work
-PyQt5==5.15.10
-PyQt5_sip @ file:///C:/b/abs_d1i1jr9fgt/croot/pyqt-split_1736540551157/work/pyqt_sip
-PySocks @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/pysocks_1699473336188/work
-python-dateutil==2.8.2
-pytz @ file:///C:/b/abs_6ap4tsz1ox/croot/pytz_1713974360290/work
-pywin32==306
-PyYAML @ file:///C:/b/abs_14xkfs39bx/croot/pyyaml_1728657968772/work
-pyzmq==25.1.2
-referencing @ file:///C:/Users/dev-admin/py312/referencing_1706802962559/work
-requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
-rich @ file:///C:/b/abs_8b92fzmygg/croot/rich_1732638991774/work
-rpds-py @ file:///C:/b/abs_0c6z5kcdb6/croot/rpds-py_1736545465023/work
-scikit-learn==1.6.1
-scipy==1.15.1
-setuptools==75.8.0
-sip @ file:///C:/b/abs_b6twfwtueg/croot/sip_1736544693649/work
-six==1.16.0
-smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
-stack-data==0.6.3
-streamlit @ file:///C:/b/abs_0cph0k28ex/croot/streamlit_1737558466943/work
-tenacity @ file:///C:/b/abs_1749lsqys6/croot/tenacity_1730304400080/work
-threadpoolctl==3.5.0
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///C:/b/abs_57avamxh36/croot/toolz_1736796279321/work
-tornado==6.4
-traitlets==5.14.1
-typing_extensions @ file:///C:/b/abs_0ffjxtihug/croot/typing_extensions_1734714875646/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-unicodedata2 @ file:///C:/b/abs_dfnftvxi4k/croot/unicodedata2_1736543771112/work
-urllib3 @ file:///C:/b/abs_7bst06lizn/croot/urllib3_1737133657081/work
-watchdog @ file:///C:/b/abs_b3l_3s276z/croot/watchdog_1717166538403/work
-wcwidth==0.2.13
-wheel==0.45.1
-win-inet-pton @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/win_inet_pton_1699472992992/work
+streamlit
+pandas
+matplotlib
+scikit-learn
